--- a/SocialWeave/Views/Post/CreatePostImage.cshtml
+++ b/SocialWeave/Views/Post/CreatePostImage.cshtml
@@ -10,7 +10,7 @@
     .card {
         border: none;
         border-radius: 15px;
-        background: linear-gradient(135deg, #9C27B0, #673AB7);
+        background: linear-gradient(135deg, #4b0082, #000000);
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     }
 
@@ -51,7 +51,6 @@
         }
 
     .btn-primary {
-        background-color: #9C27B0; 
         border: none;
         border-radius: 10px;
         padding: 12px 30px;
@@ -97,7 +96,7 @@
                         <span asp-validation-for="Description" class="text-danger"></span>
                     </div>
                     <div class="text-center">
-                        <button type="submit" class="btn btn-primary"><i class="bi bi-exposure"></i> Submit</button>
+                        <button type="submit" class="btn btn-outline-primary"><i class="bi bi-exposure"></i> Submit</button>
                     </div>
                 </form>
             </div>
