--- a/SocialWeave/Views/Post/ChoosePostType.cshtml
+++ b/SocialWeave/Views/Post/ChoosePostType.cshtml
@@ -1,17 +1,19 @@
 ﻿@{
-    ViewData["title"] = "Choose the post type";
+    ViewData["Title"] = "Choose the post type";
 }
 
-<div class="container purple-gradient p-5 rounded-5">
+<div class="container" style="background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 1)); padding: 5rem; border-radius: 1rem;">
     <div class="mb-5 text-center">
-        <h2 class="text-capitalize">@ViewData["title"]</h2>
+        <h2 class="text-uppercase text-light">@ViewData["Title"] <i class="bi bi-flower2 mx-2"></i></h2>
     </div>
-    <div class="d-flex gap-3 justify-content-center">
-        <a class="btn btn-outline-primary btn-lg text-light" style="width: 200px;" asp-controller="Post" asp-action="CreatePost">
-            <i class="bi bi-file-earmark-text-fill fs-1 me-2"></i><strong>Default Post</strong>
-        </a>
-        <a class="btn btn-outline-primary btn-lg text-light" style="width: 200px;" asp-controller="Post" asp-action="CreatePostImage">
-            <i class="bi bi-file-earmark-richtext-fill fs-1 me-2"></i><strong>Image Post</strong>
-        </a>
+    <div class="d-flex justify-content-center">
+        <div class="btn-group" role="group">
+            <a class="btn btn-outline-primary btn-lg text-light" style="width: 200px;" asp-controller="Post" asp-action="CreatePost">
+                <i class="bi bi-file-earmark-text-fill fs-1 me-2"></i><strong>Default Post</strong>
+            </a>
+            <a class="btn btn-outline-primary btn-lg text-light" style="width: 200px;" asp-controller="Post" asp-action="CreatePostImage">
+                <i class="bi bi-file-earmark-richtext-fill fs-1 me-2"></i><strong>Image Post</strong>
+            </a>
+        </div>
     </div>
 </div>
