--- a/SocialWeave/Views/Post/CreateComment.cshtml
+++ b/SocialWeave/Views/Post/CreateComment.cshtml
@@ -1,6 +1,8 @@
-﻿@model SocialWeave.Models.ViewModels.PostViewModel
+﻿@using SocialWeave.Extensions;
+
+@model SocialWeave.Models.ViewModels.CommentViewModel
 @{
-    ViewData["Title"] = "New Post";
+    ViewData["Title"] = "New Comment in post";
 }
 
 <style>
@@ -53,15 +55,16 @@
         <div class="col-md-6">
             <div class="card p-4">
                 <h2 class="text-center mb-4">@ViewData["Title"]</h2>
-                <form asp-action="CreatePost" asp-controller="Post" method="post">
+                <form asp-action="CreateComment" asp-controller="Post" method="post">
+                    <input type="hidden" asp-for=PostId/>
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="mb-3">
-                        <label asp-for="Description" class="form-label">Description:</label>
-                        <textarea class="form-control" rows="5" asp-for="Description"></textarea>
-                        <span asp-validation-for="Description" class="text-danger"></span>
+                        <label asp-for="Text" class="form-label">Comment:</label>
+                        <textarea class="form-control" rows="5" asp-for="Text"></textarea>
+                        <span asp-validation-for="Text" class="text-danger"></span>
                     </div>
                     <div class="text-center">
-                        <button type="submit" class="btn btn-outline-primary"><i class="bi bi-exposure"></i> Submit</button>
+                        <button type="submit" class="btn btn-outline-primary"><i class="bi bi-exposure mx-2"></i>Submit</button>
                     </div>
                 </form>
             </div>
