--- a/SocialWeave/Views/Home/Index.cshtml
+++ b/SocialWeave/Views/Home/Index.cshtml
@@ -3,7 +3,26 @@
 
 @model IEnumerable<SocialWeave.Models.AbstractClasses.Post>
 
- 
+<style>
+    .custom-border {
+        width: 100%;
+        height: 2px;
+        background: linear-gradient(to right, #000080, #4B0082);
+        margin: 40px 0;
+    }
+
+    .post-header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .post-meta {
+        text-align: center;
+    }
+</style>
+
+
 @if (User.Identity.IsAuthenticated)
 {
     <div class="container text-center">
@@ -11,17 +30,15 @@
         {
             @foreach (var post in Model)
             {
-                <div class="post">
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="post-header text-xxl-start">
-                            <h5><i class="bi bi-person-circle mx-2"></i>@post.User.Name.CutName()</h5>
+                <div class="post" style="margin-bottom: 80px;">
+                    <div class="post-header">
+                        <h5><i class="bi bi-person-circle mx-2"></i>@post.User.Name.CutName()</h5>
+                        <div class="post-meta">
+                            <p>@post.Date.Duration()</p>
                         </div>
-                        <form method="post" asp-action="Like" asp-route-id="@post.Id" asp-controller="Post" class="align-self-start">
+                        <form method="post" asp-action="AddConnection" asp-route-id="@post.User.Id" asp-controller="Post" class="align-self-start">
                             <button type="submit" class="btn btn-outline-primary">Connect</button>
-                        </form>
-                    </div>
-                    <div class="text-center">
-                        <p>@post.Date.Duration()</p>
+                        </form>\
                     </div>
                     <div class="post-content text-xxl-start">
                         <p>@post.Description.CutDescription()</p>
@@ -45,9 +62,8 @@
                         <div class="text-xxl">
                             <div class="post-comments" data-post-id="@post.Id" style="display: none;">
                                 <div class="comment">
-                                    <p class="text-center text-primary">Comments</p>
-                                    <a class="btn btn-outline-primary text-xxl-end mb-3" asp-route-id="@post.Id" asp-action="CreateComment" asp-controller="Post"><i class="bi bi-chat-left text-primary"></i> +</a>
                                     <hr />
+                                    <p class="text-center text-primary">Comments</p>
                                     @if (post.Comments == null || !post.Comments.Any())
                                     {
                                         <h6 class="text-center">No exist comments in this post</h6>
@@ -81,6 +97,7 @@
                                             }
                                         </div>
                                     }
+                                    <a class="btn btn-outline-primary text-xxl-center mb-3" asp-route-id="@post.Id" asp-action="CreateComment" asp-controller="Post"><i class="bi bi-chat-left text-primary"></i> Add Comment</a>
                                 </div>
                                 <form class="add-comment-form" style="display: none;">
                                     <input type="text" class="form-control mb-3" placeholder="Add a comment..." />
@@ -90,7 +107,7 @@
                         </div>
                     </div>
                 </div>
-                <hr /> 
+                <div class="custom-border"></div>
             }
         }
         else
@@ -109,7 +126,6 @@ else
         <a class="nav-link" style="font-size: 18px; margin-right: 15px;" asp-area="" asp-controller="User" asp-action="Login"><i class="bi bi-box-arrow-in-right mx-2"></i>Login</a>
     </div>
 }
-
 
 @section Scripts {
     <script>
