--- a/SocialWeave/Views/Post/CreateComment.cshtml
+++ b/SocialWeave/Views/Post/CreateComment.cshtml
@@ -13,7 +13,7 @@
     .card {
         border: none;
         border-radius: 15px;
-        background: linear-gradient(135deg, #6a0dad, #000000);
+        background: linear-gradient(135deg, #000080, #4B0082);
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     }
 
