--- a/SocialWeave/Views/Post/CreateComment.cshtml
+++ b/SocialWeave/Views/Post/CreateComment.cshtml
@@ -56,7 +56,7 @@
             <div class="card p-4">
                 <h2 class="text-center mb-4">@ViewData["Title"]</h2>
                 <form asp-action="CreateComment" asp-controller="Post" method="post">
-                    <input type="hidden" asp-for=PostId/>
+                    <input type="hidden" asp-for="PostId" />
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="mb-3">
                         <label asp-for="Text" class="form-label">Comment:</label>
